--- a/front/package.json
+++ b/front/package.json
@@ -45,6 +45,7 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
+    "thread-loader": "^3.0.4",
     "typescript": "^4.4.3",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
