--- a/front/package.json
+++ b/front/package.json
@@ -3,34 +3,34 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "nodemon": "nodemon src/nodemon.ts",
-    "dev-client": "webpack serve --config webpack.client.ts",
-    "dev-server": "webpack -w --config webpack.server.ts",
+    "nodemon": "nodemon",
+    "dev-client": "webpack serve --config ./config/webpack.client.js",
+    "dev-server": "cross-env IS_SERVER=true webpack -w --config ./config/webpack.server.js",
     "dev": "run-p dev-client dev-server nodemon",
     "clean": "rimraf ./dist/",
-    "build-client": "cross-env NODE_ENV=production webpack --config webpack.client.ts",
-    "build-server": "cross-env NODE_ENV=production webpack --config webpack.server.ts",
+    "build-client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.js",
+    "build-server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.js",
     "build-all": "run-p build-client build-server",
     "build": "run-s clean build-all",
-    "start": "ts-node src/server.ts"
+    "start": "node src/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vue/composition-api": "^1.2.2",
+    "axios": "^0.21.4",
     "express": "^4.17.1",
-    "ts-node": "^10.2.1",
+    "http-proxy": "^1.18.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
-    "vue-server-renderer": "^2.6.14",
-    "vuex": "^3.6.2",
-    "vuex-router-sync": "^5.0.0"
+    "vue-server-renderer": "^2.6.14"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-server": "^4.1.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "babel-preset-typescript-vue": "^1.1.1",
@@ -46,7 +46,9 @@
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
     "thread-loader": "^3.0.4",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
+    "url-loader": "^4.1.1",
     "vue-loader": "^15.9.8",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.14",
