--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -1,7 +1,24 @@
 {
+  "exclude": [
+    "node_modules",
+    "./src/**/*.spec.ts",
+    "dist"
+  ],
+  "include": [
+    "src/**/*",
+    "../common/**/*"
+  ],
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "esnext",
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "strictBindCallApply": true,
+    "target": "es6",
+    "module": "esnext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "sourceMap": true,
     "resolveJsonModule": true
