--- a/front/package.json
+++ b/front/package.json
@@ -9,10 +9,11 @@
     "dev": "run-p dev-client dev-server nodemon",
     "clean": "rimraf ./dist/",
     "build-client": "cross-env NODE_ENV=production webpack --config ./config/webpack.client.js",
-    "build-server": "cross-env NODE_ENV=production webpack --config ./config/webpack.server.js",
+    "build-server": "cross-env  IS_SERVER=true NODE_ENV=production webpack --config ./config/webpack.server.js",
     "build-all": "run-p build-client build-server",
     "build": "run-s clean build-all",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "format": "prettier --write \"src/**/*.ts\" \"*.js\" \"src/**/*.vue\""
   },
   "author": "",
   "license": "ISC",
@@ -43,6 +44,7 @@
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
+    "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
     "thread-loader": "^3.0.4",
