--- a/front/package.json
+++ b/front/package.json
@@ -47,6 +47,7 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
+    "serve-favicon": "^2.5.0",
     "thread-loader": "^3.0.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
