--- a/front/package.json
+++ b/front/package.json
@@ -18,12 +18,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vue/composition-api": "^1.2.2",
     "axios": "^0.21.4",
     "express": "^4.17.1",
     "http-proxy": "^1.18.1",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.2",
+    "vue": "^3.2.19",
+    "vue-router": "^4.0.11",
     "vue-server-renderer": "^2.6.14"
   },
   "devDependencies": {
@@ -31,9 +30,11 @@
     "@babel/preset-env": "^7.15.6",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "@vue/compiler-sfc": "^3.2.19",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
     "mini-css-extract-plugin": "^2.3.0",
@@ -43,17 +44,19 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
+    "serialize-javascript": "^3.1.0",
     "serve-favicon": "^2.5.0",
     "thread-loader": "^3.0.4",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.8",
+    "vue-bundle-renderer": "^0.3.1",
+    "vue-loader": "^16.8.1",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.14",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.1",
+    "webpack-manifest-plugin": "^4.0.2",
     "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
   }
