--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,7 @@
     "build-all": "run-p build-client build-server",
     "build": "run-s clean build-all",
     "start": "node src/server.js",
-    "format": "prettier --write \"src/**/*.ts\" \"*.js\" \"src/**/*.vue\""
+    "lint": "eslint  \"src/**/*.ts\" \"*.js\" \"src/**/*.vue\" --fix"
   },
   "author": "",
   "license": "ISC",
@@ -31,17 +31,19 @@
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
     "@vue/compiler-sfc": "^3.2.19",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.2.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.19.1",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^12.1.0",
     "serialize-javascript": "^3.1.0",
