--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,7 @@
     "build-server": "cross-env  IS_SERVER=true NODE_ENV=production webpack --config ./config/webpack.server.js",
     "build-all": "run-p build-client build-server",
     "build": "run-s clean build-all",
-    "start": "node src/server.js",
+    "start": "node ssr/server.js",
     "lint": "eslint  \"src/**/*.ts\" \"*.js\" \"src/**/*.vue\" --fix"
   },
   "author": "",
