выпилил линтер на прекомит

--- a/front/package.json
+++ b/front/package.json
@@ -13,19 +13,7 @@
     "build-all": "run-p build-client build-server",
     "build": "run-s clean build-all",
     "start": "node ssr/server.js",
-    "lint": "eslint  \"src/**/*.ts\" \"*.js\" \"src/**/*.vue\" --fix",
-    "prepare": "cd .. && husky install front/.husky"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged --no-stash"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts,vue}": [
-      "npm run eslint --fix"
-    ],
-    "*.js": "eslint --cache --fix"
+    "lint": "eslint  \"src/**/*.ts\" \"*.js\" \"src/**/*.vue\" --fix"
   },
   "author": "",
   "license": "ISC",
@@ -52,8 +40,6 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.19.1",
     "fork-ts-checker-webpack-plugin": "^6.3.3",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.2.0",
     "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12",
